fix: update destructive color variable for improved visibility

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@
     --secondary-foreground: 334 0% 100%;
     --accent: 217.5 9.09% 17.25%;
     --accent-foreground: 25 100% 64%;
-    --destructive: 0 86.89% 48.16%;
+    --destructive: 6 92% 63%;
     --destructive-foreground: 0 0% 0%;
     --ring: 217.5 9.09% 17.25%;
     --radius: 0.5rem;
